feat(i18n): migrate auth folder

--- a/messages/i18n/pt-BR.json
+++ b/messages/i18n/pt-BR.json
@@ -581,5 +581,14 @@
         }
       }
     }
+  },
+  "auth": {
+    "login": {
+      "title": "Login",
+      "description": "Faça login na sua conta",
+      "welcome": "Olá, bom ver você por aqui! 👋",
+      "subtitle": "Faça login com sua conta para continuar",
+      "googleButton": "Entre com Google"
+    }
   }
 }
