fix(i18n): adjust notification message

--- a/messages/i18n/en.json
+++ b/messages/i18n/en.json
@@ -259,7 +259,9 @@
           },
           "high": {
             "title": "High Complexity",
-            "examples": ["13+ points: Epic that should be broken down"]
+            "examples": [
+              "13+ points: Epic that should be broken down"
+            ]
           }
         }
       },
@@ -1072,5 +1074,9 @@
         "native": "English"
       }
     }
+  },
+  "shared": {
+    "you": "You",
+    "someone": "Someone"
   }
 }
