feat(i18n): hide information when user is a guest

--- a/messages/i18n/en.json
+++ b/messages/i18n/en.json
@@ -816,7 +816,9 @@
         "planLabel": "{planName} Plan",
         "activeStatus": "Active"
       },
-      "signOut": "Sign Out"
+      "signOut": "Sign Out",
+      "guestUser": "Guest User",
+      "createAccount": "Create Account"
     },
     "reportButton": {
       "label": "Button to report",
