--- a/messages/i18n/es.json
+++ b/messages/i18n/es.json
@@ -816,7 +816,9 @@
         "planLabel": "Plan {planName}",
         "activeStatus": "Activo"
       },
-      "signOut": "Cerrar Sesión"
+      "signOut": "Cerrar Sesión",
+      "guestUser": "Usuario invitado",
+      "createAccount": "Crear Cuenta"
     },
     "reportButton": {
       "label": "Botón para reportar",
